2007-02-28  Rob Buis  <buis@kde.org>

        Reviewed by Maciej.

        Add testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=12609
        Any SVG element will create renderers even when children of HTML elements

        * svg/custom/xhtml-no-svg-renderer-expected.checksum: Added.
        * svg/custom/xhtml-no-svg-renderer-expected.png: Added.
        * svg/custom/xhtml-no-svg-renderer-expected.txt: Added.
        * svg/custom/xhtml-no-svg-renderer.xhtml: Added.

2007-02-28  Rob Buis  <buis@kde.org>

        Reviewed by Maciej.

        Add test for:
        http://bugs.webkit.org/show_bug.cgi?id=12913
        Markers do not render in webkit when it misses markerWidth or markerHeight attribute

        * svg/custom/marker-default-width-height-expected.checksum: Added.
        * svg/custom/marker-default-width-height-expected.png: Added.
        * svg/custom/marker-default-width-height-expected.txt: Added.
        * svg/custom/marker-default-width-height.svg: Added.

2007-02-27  Geoffrey Garen  <ggaren@apple.com>

        Extending the timeout on this test to see if it fixes the buildbot failure.
        (I don't get a failure locally.)

        * fast/leaks/003.html:

2007-02-27  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by oliver
        
        <rdar://problem/5027300>
        REGRESSION: Images inserted with align left/right are lost

        * editing/inserting/12882-expected.checksum: Added.
        * editing/inserting/12882-expected.png: Added.
        * editing/inserting/12882-expected.txt: Added.
        * editing/inserting/12882.html: Added.

2007-02-27  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Hyatt.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=12910
          REGRESSION (r18756-r18765): list-bullet doesn't redraw properly when changing the list's content using JavaScript

        * fast/repaint/list-marker-expected.checksum: Added.
        * fast/repaint/list-marker-expected.png: Added.