@@ -1,0 +1,13 @@
+<div>
+<ol id="ol">
+<li>foo</li>
+<li>bar</li>
+</ol>
+
+<script>
+//force layout
+document.body.offsetTop;
+var ol = document.getElementById("ol");
+ol.start = "2";
+
+</script>
