@@ -1,3 +1,15 @@
+2007-02-27  Antti Koivisto  <antti@apple.com>
+
+        Reviewed by Maciej.
+
+        - fix http://bugs.webkit.org/show_bug.cgi?id=12911
+        GoogleDocs: Ordered lists don't update immediately when start attribute changed
+        
+        Update list marker value when start attribute changes.
+
+        * html/HTMLOListElement.cpp:
+        (WebCore::HTMLOListElement::parseMappedAttribute):
+
 2007-02-28  Nikolas Zimmermann  <zimmermann@kde.org>
 
         Reviewed by Maciej.
