@@ -1,3 +1,15 @@
+2007-02-27  Antti Koivisto  <antti@apple.com>
+
+        Reviewed by Maciej.
+
+        - test for http://bugs.webkit.org/show_bug.cgi?id=12911
+        GoogleDocs: Ordered lists don't update immediately when start attribute changed
+
+        * fast/lists/ol-start-dynamic-expected.checksum: Added.
+        * fast/lists/ol-start-dynamic-expected.png: Added.
+        * fast/lists/ol-start-dynamic-expected.txt: Added.
+        * fast/lists/ol-start-dynamic.html: Added.
+        
 2007-02-28  Rob Buis  <buis@kde.org>
 
         Reviewed by Maciej.
